--- a/css/style.css
+++ b/css/style.css
@@ -10,17 +10,36 @@
 body {
   min-height: 100%;
   background: #e3f2fd;
+  height: 1400px;
 }
-nav {
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 70px;
-  width: 100%;
+a{
+  text-decoration: none;
+  color: #5a5a5a;
+}
+img{
+  cursor: pointer;
+}
+.flex-div{
   display: flex;
   align-items: center;
+}
+nav {
+  position: sticky;
+  top: 0;
+  padding: 10px;
+  z-index: 10;
+  justify-content: space-between;
   background: #fff;
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.nav-right img{
+width: 25px;  
+margin-right: 25px;
+}
+.nav-right .user-icon{
+  width: 35px;
+  border-radius: 50%;
+  margin-right: 20px;
 }
 nav .logo {
   display: flex;
@@ -44,7 +63,7 @@ nav .sidebar {
   left: -100%;
   height: 100%;
   width: 260px;
-  padding: 20px 0;
+  padding: 10px;
   background-color: #fff;
   box-shadow: 0 5px 1px rgba(0, 0, 0, 0.1);
   transition: all 0.4s ease;
